--- a/dscatalog-mobile/package.json
+++ b/dscatalog-mobile/package.json
@@ -12,17 +12,20 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
-    "axios": "^0.21.1",
+    "ansi-regex": "^6.0.1",
+    "axios": "^0.23.0",
     "browserlist": "^1.0.1",
+    "browserslist": "^4.17.4",
     "date-and-time": "0.14.2",
     "expo": "^42.0.0",
     "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^3.0.0",
+    "path-parse": "^1.0.7",
     "query-string": "^7.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "^0.66.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~2.2.0",
@@ -31,7 +34,9 @@
     "react-native-tiny-toast": "^1.0.7",
     "react-native-web": "~0.13.12",
     "set-value": "^4.1.0",
-    "ws": "^7.5.3",
+    "tmpl": "^1.0.5",
+    "url-parse": "^1.5.3",
+    "ws": "^8.2.3",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
